# prodcycle-cli

./: .gitignore  AGENTS.md  README.md  llms.txt  package.json
.github/workflows/: publish.yml
node/: README.md  package-lock.json  package.json
node/src/: api-client.ts  cli.ts  index.ts
node/src/formatters/: prompt.ts  sarif.ts  table.ts
node/src/utils/: fs.ts
python/: LICENSE  README.md  pyproject.toml
python/src/prodcycle/: __init__.py  api_client.c  api_client.py  cli.c  cli.py
python/src/prodcycle/formatters/: prompt.c  prompt.py  sarif.c  sarif.py  table.c  table.py
python/src/prodcycle/utils/: fs.c  fs.py
