[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-code-scanner"
version = "0.1.2"
description = "Multi-framework policy-as-code compliance scanner for infrastructure and application code."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "See LICENSE in LICENSE"}
authors = [
    {name = "ProdCycle, Inc.", email = "engineering@prodcycle.com"},
]
keywords = ["compliance", "soc2", "hipaa", "nist", "cli", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
compliance-code-scanner = "compliance_code_scanner.cli:main"

[project.urls]
Homepage = "https://prodcycle.com"
Documentation = "https://docs.prodcycle.com"
Repository = "https://github.com/prodcycle/compliance-code-scanner-cli"
